--- a/trail-conditions-app/src/main/res/layout/trail_list_item_view.xml
+++ b/trail-conditions-app/src/main/res/layout/trail_list_item_view.xml
@@ -93,6 +93,8 @@
             android:layout_marginEnd="16dp"
             android:textAppearance="@android:style/TextAppearance.Material.Body1"
             android:textSize="16sp"
+            android:textIsSelectable="true"
+            android:autoLink="web"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/last_updated_time"
