--- a/trail-conditions-app/src/main/res/layout/markdown_activity.xml
+++ b/trail-conditions-app/src/main/res/layout/markdown_activity.xml
@@ -37,6 +37,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textIsSelectable="true"
             tools:text="Mark Down Here" />
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
